--- a/main.css
+++ b/main.css
@@ -1,3 +1,21 @@
-nav{
-	background-color: red;
+body{
+	background-color: #fff;
+	font-family: AvenirNext, bold;
+}
+ul{
+	list-style: none;
+}
+aside{
+display: inline-block;
+}
+.navbar{
+	height: 600px;
+	width: 230px;
+	display: inline-block;
+	font-family: AvenirNext, bold;
+	background-color: #d6d6d6;
+}
+.listElement{
+	padding: 10px;
+	font-family: inherit;
 }
