--- a/main.css
+++ b/main.css
@@ -7,6 +7,9 @@ ul{
 }
 aside{
 display: inline-block;
+background-color: #d6d6d6;
+margin: 20px;
+padding: 10px;
 }
 .navbar{
 	height: 600px;
@@ -18,4 +21,7 @@ display: inline-block;
 .listElement{
 	padding: 10px;
 	font-family: inherit;
+}
+.collectData{
+	padding: 10px;
 }
