--- a/main.css
+++ b/main.css
@@ -3,15 +3,25 @@ body{
 	font-family: AvenirNext, bold;
 }
 ul{
+	display: inline;
+	align-content: center;
 	list-style: none;
 }
+h2{
+padding-left: : 10px;
+display: block;
+}
 aside{
+height: 600px;
+width: 1000px;
 display: inline-block;
 background-color: #d6d6d6;
-margin: 20px;
+margin: 10px;
 padding: 10px;
 }
 .navbar{
+	text-align: center;
+	margin: 10px;
 	height: 600px;
 	width: 230px;
 	display: inline-block;
@@ -19,9 +29,22 @@ padding: 10px;
 	background-color: #d6d6d6;
 }
 .listElement{
-	padding: 10px;
+	align-content: center;
+	padding-top: 5px;
+	padding-bottom: 5px;
 	font-family: inherit;
+	
 }
 .collectData{
 	padding: 10px;
 }
+.congr{
+	margin-left: 15px;
+}
+.listElement:checked{
+	align-content: center;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	font-family: inherit;
+	background-color: #fff;
+	border-left: 4px solid black;
