--- a/main.css
+++ b/main.css
@@ -7,21 +7,30 @@ ul{
 	align-content: center;
 	list-style: none;
 }
+input{
+	display: block;
+	height: 20px;
+}
 h2{
 padding-left: : 10px;
-display: block;
+display: inline-block;
 }
 aside{
+margin: 10px;
 height: 600px;
-width: 1000px;
+width: 800px;
 display: inline-block;
 background-color: #d6d6d6;
-margin: 10px;
+position: fixed;
+bottom: 43px;
+}
+.container{
+display: inline;
 padding: 10px;
 }
 .navbar{
 	text-align: center;
-	margin: 10px;
+margin-bottom: 100px;
 	height: 600px;
 	width: 230px;
 	display: inline-block;
@@ -36,15 +45,34 @@ padding: 10px;
 	
 }
 .collectData{
-	padding: 10px;
+
 }
 .congr{
 	margin-left: 15px;
 }
-.listElement:checked{
+.btn{
+	border: 0px;
+	background-color: rgba(255, 255, 255, 0);
+}
+.Address{
+	display: inline-block;
+	align-content: right;
+	float: left;
+}
+#lname{
+display: inline-block;
+float: left;
+}
+.FLname{
+	height: 100px;
+	width: 800px;
+	display: inline;
+}
+.listElement:active{
 	align-content: center;
 	padding-top: 5px;
 	padding-bottom: 5px;
 	font-family: inherit;
 	background-color: #fff;
 	border-left: 4px solid black;
+}
