--- a/main.css
+++ b/main.css
@@ -29,6 +29,14 @@ background-color: #d6d6d6;
 position: fixed;
 bottom: 39px;
 }
+button{
+	color: #293135;
+	border: 2px solid #293135;
+	background-color: #d6d6d6;
+	margin-left: 20px;
+	width: 110px;
+	height: 35px;
+}
 .container{
 display: inline;
 padding: 10px;
@@ -91,6 +99,9 @@ float: left;
 }
 .check{
 	width: 115px;
+}
+input:hover{
+	background-color: #d6d6d6;
 }
 .listElement:active{
 	align-content: center;
