--- a/main.css
+++ b/main.css
@@ -132,6 +132,7 @@ color: #d6d6d6;
 }
 input:hover{
 	background-color: #d6d6d6;
+	border:1px solid;
 }
 .listElement:active{
 	align-content: center;
