--- a/main.css
+++ b/main.css
@@ -1,11 +1,19 @@
 body{
 	background-color: #fff;
-	font-family: AvenirNext, bold;
+	font: bold italic 110% serif; 
 }
 ul{
+	margin-left: 200px;
 	display: inline;
 	align-content: center;
 	list-style: none;
+}
+li{
+	display: block;
+	margin-left: 20px;
+}
+h1{
+	margin-left: 20px;
 }
 input{
 	display: block;
@@ -27,7 +35,7 @@ width: 800px;
 display: inline-block;
 background-color: #d6d6d6;
 position: fixed;
-bottom: 39px;
+bottom: 7px;
 }
 .CancelButton{
 	color: #293135;
@@ -41,8 +49,9 @@ bottom: 39px;
 display: inline;
 padding: 10px;
 }
+
 .navbar{
-	text-align: center;
+	text-align: left;
 margin-bottom: 100px;
 	height: 600px;
 	width: 230px;
@@ -102,8 +111,9 @@ float: left;
 	flex-direction: row;
 }
 .addButton{
-	width: 150px;
-	height: 35px;
+	align-items: center;
+	width: 145px;
+	height: 30px;
 	display: flex;
 	flex-direction: row;
 	background-color: #293135;
@@ -114,7 +124,7 @@ float: left;
 	border-left:2px solid #293135;
 	width: 35px;
 	background-color: #d6d6d6;
-	height: 35px;
+	height: 30px;
 	color: #293135;
 }
 .check{
@@ -128,7 +138,7 @@ color: #d6d6d6;
 	background-color: #293135;
 	margin-left: 20px;
 	width: 110px;
-	height: 35px;
+	height: 30px;
 }
 input:hover{
 	background-color: #d6d6d6;
