--- a/main.css
+++ b/main.css
@@ -2,41 +2,47 @@ body{
 	background-color: #fff;
 	font: bold italic 110% serif; 
 }
+
 ul{
 	margin-left: 200px;
 	display: inline;
 	align-content: center;
 	list-style: none;
 }
+
 li{
 	display: block;
 	margin-left: 20px;
 }
+
 h1{
 	margin-left: 20px;
 }
+
 input{
 	display: block;
 	height: 20px;
 	width: 180px;
 }
+
 select{
 	height: 20px;
 	width: 180px;
 }
+
 h2{
 padding-left: : 10px;
 display: inline-block;
 }
+
 aside{
 margin: 10px;
 height: 600px;
 width: 800px;
 display: inline-block;
 background-color: #d6d6d6;
-position: fixed;
-bottom: 39px;
 }
+
 .CancelButton{
 	color: #293135;
 	border: 2px solid #293135;
@@ -45,6 +51,7 @@ bottom: 39px;
 	width: 110px;
 	height: 35px;
 }
+
 .container{
 display: inline;
 padding: 10px;
@@ -56,60 +63,68 @@ margin-bottom: 100px;
 	height: 600px;
 	width: 230px;
 	display: inline-block;
-	font-family: AvenirNext, bold;
 	background-color: #d6d6d6;
 }
+
 .listElement{
 	align-content: center;
-	padding-top: 5px;
-	padding-bottom: 5px;
+	padding: 10px;
 	font-family: inherit;
+	transition: 0.5s;
 	
 }
-.collectData{
 
-}
 .congr{
 	margin-left: 15px;
 }
+
 .btn{
 	border: 0px;
 	background-color: rgba(255, 255, 255, 0);
 }
+
 .Address{
 	display: inline-block;
 	align-content: right;
 	float: left;
 }
+
 #lname{
 display: inline-block;
 float: left;
 }
+
 .FLname{
 	height: 100px;
 	width: 800px;
 	display: inline;
 }
+
 .firstrow{
 	display: flex;
 	flex-direction: row;
 	margin-left: 22px;
 }
+
 .secblock{
 	margin-left: 10px;
 }
+
 .thirdRow{
 	margin-left: 10px;
 	display: flex;
 	flex-direction: row;
 }
+
 .thirdRowElement{
 	margin-left: 10px; 
 }
+
 .fourthRow{
 	display: flex;
 	flex-direction: row;
 }
+
 .addButton{
 	align-items: center;
 	width: 145px;
@@ -120,6 +135,7 @@ float: left;
 	border:2px solid #293135;
 	margin-left: 20px;
 }
+
 .Addbutton{
 	border-left:2px solid #293135;
 	width: 35px;
@@ -127,9 +143,11 @@ float: left;
 	height: 30px;
 	color: #293135;
 }
+
 .check{
 	width: 115px;
 }
+
 .addText{
 	font-color: #fff;
 	text-align: center;
@@ -140,11 +158,13 @@ color: #d6d6d6;
 	width: 110px;
 	height: 30px;
 }
+
 input:hover{
 	background-color: #d6d6d6;
 	border:1px solid;
 }
-.listElement:active{
+
+.listElement:hover{
 	align-content: center;
 	padding-top: 5px;
 	padding-bottom: 5px;
