--- a/main.css
+++ b/main.css
@@ -55,6 +55,12 @@ h2
 	display: inline-block;
 }
 
+a
+{
+	background-color: #fff;
+	width: 200px;
+}
+
 aside
 {
 	margin: 10px;
@@ -71,6 +77,68 @@ span
 	align-content: center;
 	margin-top: 10px;
 	font-size: 16px;
+}
+
+button
+{
+	margin-bottom: 20px;
+}
+
+.span-order-list
+{
+	font-size: 20px;
+}
+
+.first-page
+{
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
+
+.order-span
+{
+	font-size: 20px;
+}
+
+.bye
+{
+	border-left:2px solid #293135;
+	width: 35px;
+	background-color: #f2f5f6;
+	height: 30px;
+	color: #293135;
+}
+
+.account-changer
+{
+	align-content: center;
+	align-items: center;
+	width: 145px;
+	height: 30px;
+	display: flex;
+	flex-direction: row;
+	background-color: #293135;
+	border:2px solid #293135;
+	margin-left: 20px;
+}
+
+.button-block
+{
+	align-items: center;
+	width: 145px;
+	height: 50px;
+	display: flex;
+	flex-direction: row;
+	background-color: #293135;
+	border:2px solid #293135;
+	margin-left: 20px;
+}
+
+
+.order-div
+{
+	margin-bottom: 10px;
 }
 
 .Address-1
@@ -220,7 +288,26 @@ span
 	margin-left: 20px;
 }
 
+.login-div-cheker{
+	margin: 15px; 
+}
+
+.login-div-cheker{
+	display: none;
+	color: red;
+	font-size: 10px;
+}
+
 .Add-button
+{
+	border-left:2px solid #293135;
+	width: 35px;
+	background-color: #f2f5f6;
+	height: 30px;
+	color: #293135;
+}
+
+.Store-button
 {
 	border-left:2px solid #293135;
 	width: 35px;
